[package]
name = "pastry-dht"
description = "A Pastry DHT protocol implementation in Rust."
authors = ["Alvaro Tedeschi"]
version = "0.1.0"
edition = "2021"
license-file = "./LICENSE"

[dependencies]
log = "*"
env_logger = "*"
sha2 = "*"
rand = "*"
tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-stream = "*"
futures-core = "*"
tonic = "0.9.2"
prost = "0.11.9"

[build-dependencies]
tonic-build = "0.9.2"
