[package]
name = "pastry-dht"
description = "A Pastry DHT protocol implementation in Rust."
authors = ["Alvaro Tedeschi"]
version = "0.1.7"
edition = "2021"
license-file = "./LICENSE"

[dependencies]
log = "0.4.20"
env_logger = "0.10.0"
sha2 = "0.10.8"
rand = "0.8.5"
tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-stream = "0.1.14"
futures-core = "0.3.29"
tonic = "0.10.2"
prost = "0.12.1"
serial_test = "2.0.0"

[build-dependencies]
tonic-build = "0.10.2"
